kubernetes/apps/default/librechat/code-interpreter/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-interpreter
  namespace: default
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - code-interpreter.mcgrath.nz
  rules:
    - backendRefs:
        - name: code-interpreter
          port: 8000
